test/files/neg/t3683a.check
t3683a.scala:14: warning: match may not be exhaustive.
It would fail on the following input: XX()
    w match {
    ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
